plugins {
    id 'org.springframework.boot' version '2.3.0.RELEASE'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
    id "org.flywaydb.flyway" version "6.4.3"
    id 'java'
    id 'war'
}

group = 'com.smallclover'
version = '1.0.0-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    // 在当前版本（具体那个版本没有仔细调查，starter-web中已经不包括bean validationJSR303标准了，移动到下面这个starter中俄）
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // swagger starter 依赖
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'




    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'

    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.2'
    implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.2.13'
    implementation 'org.flywaydb:flyway-core:6.0.8'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    implementation 'org.apache.commons:commons-lang3:3.10'
    // NoClassDefFoundError: org/apache/commons/pool2/impl/GenericObjectPoolConfig
    implementation 'org.apache.commons:commons-pool2:2.8.0'

    implementation 'com.blueconic:browscap-java:1.3.1'


    implementation 'com.drewnoakes:metadata-extractor:2.14.0'

    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'mysql:mysql-connector-java'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
}

test {
    useJUnitPlatform()
}
// 乱码问题解决？
tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

//打包成war
war {
    enabled = true
    archiveName 'npe.war'
}

// 现在用JDK13在Gradle上有点问题
//compileJava{
//    options.compilerArgs += ["--enable-preview"]
//}